pseudo-cart and style fixes

--- a/src/app/modules/app/styles/Header.styl
+++ b/src/app/modules/app/styles/Header.styl
@@ -46,8 +46,10 @@ header
 @media screen and (max-width: 767px)
   header
     .logo
-      h1, h2
-        text-align center
+      > a
+        margin auto
+        h1, h2
+          text-align center
 
     .info
       text-align center
