--- a/src/app/modules/contacts/styles/ContactsInfo.styl
+++ b/src/app/modules/contacts/styles/ContactsInfo.styl
@@ -8,6 +8,11 @@
       color #000
       i, svg
         margin-right 10px
+  .schedule
+    div
+      font-size 1.3rem
+      &.schedule-time
+        font-size 2rem
 
 @media screen and (max-width: 767px)
   .contacts-info
