--- a/src/app/modules/products/styles/ProductList.styl
+++ b/src/app/modules/products/styles/ProductList.styl
@@ -2,3 +2,11 @@
   h3
     margin 10px
     text-align center
+
+  .table
+    .thead-dark
+      th
+        background-color #000
+        border-color #000
+        color #fff
+
