--- a/src/app/modules/app/styles/Footer.styl
+++ b/src/app/modules/app/styles/Footer.styl
@@ -34,8 +34,10 @@ footer
 @media screen and (max-width: 767px)
   footer
     .logo
-      h1, h2
-        text-align center
+      > a
+        margin auto
+        h1, h2
+          text-align center
 
     .info
       text-align center
