--- a/src/app/modules/slider/styles/Slider.styl
+++ b/src/app/modules/slider/styles/Slider.styl
@@ -8,9 +8,13 @@
       .legend
         border-radius 0
         opacity 1
-        font-size 14px
+        font-size 2rem
+        bottom 15px
 @media screen and (max-width: 767px)
   .slider-top
     .carousel
       .slide
         max-height 200px
+        .legend
+          font-size 1.5rem
+          bottom 5px
