--- a/src/app/modules/app/styles/Footer.styl
+++ b/src/app/modules/app/styles/Footer.styl
@@ -30,6 +30,7 @@ footer
       a
         font-size 1.5rem
         i, svg
+          font-size 1.5rem
           margin-right 10px
 @media screen and (max-width: 767px)
   footer
