--- a/src/app/modules/app/styles/Header.styl
+++ b/src/app/modules/app/styles/Header.styl
@@ -39,8 +39,8 @@ header
     .cart
       a
         font-size 1.5rem
-
         i, svg
+          font-size 1.5rem
           margin-right 10px
 
 @media screen and (max-width: 767px)
