--- a/src/app/modules/cart/styles/CartProduct.styl
+++ b/src/app/modules/cart/styles/CartProduct.styl
@@ -7,6 +7,7 @@
         border-color #000
         border-radius 0
         box-shadow none
+        text-align center
       button
         background #000
         color #fff
