--- a/src/app/modules/slider/styles/Slider.styl
+++ b/src/app/modules/slider/styles/Slider.styl
@@ -18,3 +18,7 @@
         .legend
           font-size 1.5rem
           bottom 5px
+      .control-dots
+        .dot
+          width 16px
+          height 16px
