new slides and age confirmation

--- a/src/app/modules/app/styles/App.styl
+++ b/src/app/modules/app/styles/App.styl
@@ -10,7 +10,10 @@
   .table
     td, th
       vertical-align middle
-
+  .blurred
+    filter: blur(8px)
+    -ms-filter: blur(8px)
+    -webkit-filter: blur(8px)
 @media screen and (max-width: 767px)
   .table-adaptive
     /* Force table to not be like tables anymore */
