--- a/frontApp/modules/products/styles/ProductList.styl
+++ b/frontApp/modules/products/styles/ProductList.styl
@@ -4,9 +4,31 @@
     text-align center
 
   .table
-    .thead-dark
-      th
-        background-color #000
-        border-color #000
-        color #fff
+    th
+      background-color #000
+      border-color #000
+      color #fff
 
+    th:nth-child(1)
+      width 10%
+
+    th:nth-child(2)
+      width 35%
+
+    th:nth-child(3)
+      width 20%
+
+    th:nth-child(4)
+      width 35%
+      text-align center
+    tbody
+      tr
+        td:nth-child(1)
+          padding-left 15px
+@media screen and (max-width: 767px)
+  .product-list
+    .table
+      tbody
+        tr
+          td:nth-child(1)
+            padding-left 5px
